# postnl-data-engineering-assessment

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: config.yaml
data/raw/: routes.json  shipments.csv  vehicles.csv  weather.json
docs/: ARCHITECTURE.md  DATA_QUALITY_STRATEGY.md  KPI_DEFINITIONS.md
scripts/: init-minio.sh
src/core/: configuration_manager.py  spark_session_manager.py
src/layers/: bronze_layer_manager.py  gold_layer_manager.py  silver_layer_manager.py
src/pipelines/: route_performance_pipeline.py
src/schema_registry/: routes_schema.py  schema_registry.py  shipments_schema.py  vehicles_schema.py  weather_schema.py
src/sinks/: delta_sink.py
src/utils/: logging_utils.py  quarantine_utils.py  spark_utils.py
tests/: conftest.py
tests/core/: test_configuration_manager.py
tests/layers/: test_bronze_layer_manager.py  test_gold_layer_manager.py  test_silver_layer_manager.py
tests/schema_registry/: test_schema_registry.py
