[project]
name = "postnl-data-engineering-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "delta-spark==3.2.0",
    "pyspark==3.5.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
